--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "trotseepost",
   "version": "0.1.0",
   "private": true,
+  "description": "Search community sourced travel videos!",
   "dependencies": {
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.73.0",
+    "styled-components": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
