--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "description": "Search community sourced travel videos!",
   "dependencies": {
+    "animated": "^0.2.1",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-transition-group": "^2.2.1",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.73.0",
     "styled-components": "^2.2.0"
