--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "FiveToNine",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "trotseepost",
+  "version": "0.1.0",
+  "private": true,
+  "description": "Search community sourced travel videos!",
   "dependencies": {
-    "express": "^4.15.4",
-    "password-generator": "^2.1.0",
-    "react-styled-components": "^0.1.11",
+    "animated": "^0.2.1",
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "react-transition-group": "^2.2.1",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.73.0",
-    "server": "^1.0.0-beta.2"
+    "styled-components": "^2.2.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "heroku-postbuild": "cd client && yarn --production=false && yarn run build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
