--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
   "name": "trotsee",
-  "version": "0.1.0",
-  "private": true,
-  "description": "Search community sourced travel videos!",
-  "dependencies": {
-    "animated": "^0.2.1",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "react-transition-group": "^2.2.1",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.73.0",
-    "styled-components": "^2.2.0"
-  },
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongoose": "^4.13.5",
+    "react": "^16.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
