--- a/trotseeclient/package.json
+++ b/trotseeclient/package.json
@@ -5,6 +5,7 @@
   "description": "Search community sourced travel videos!",
   "dependencies": {
     "animated": "^0.2.1",
+    "axios": "^0.17.1",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-router-dom": "^4.2.2",
@@ -19,5 +20,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+   "proxy": "http://localhost:4000"
 }
